--- a/exercicios/.settings/org.eclipse.core.resources.prefs
+++ b/exercicios/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/estruturasDeControle/___exercicios.java=UTF-8
 encoding//src/fundamentos/Temperatura.java=UTF-8
