--- a/exercicios/.classpath
+++ b/exercicios/.classpath
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-12">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 20.0.1 [20.0.1]">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="libs/mysql-connector-java-5.1.48.jar"/>
-	<classpathentry kind="lib" path="libs/mchange-commons-java-0.2.16.jar"/>
-	<classpathentry kind="lib" path="libs/c3p0-0.9.5.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
