--- a/JDBC/.classpath
+++ b/JDBC/.classpath
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/Users/cassio/Documents/GitHub/java/JDBC/libs/mysql-connector-java-5.1.24-bin.jar"/>
+	<classpathentry kind="lib" path="/Users/cassio/Documents/GitHub/java/JDBC/libs/mchange-commons-java-0.2.19.jar"/>
+	<classpathentry kind="lib" path="/Users/cassio/Documents/GitHub/java/JDBC/libs/c3p0-0.9.5.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
